# tavern-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/: design.md  gap-analysis.md  shared-cache-design.md  usage.md
index/sharedkv/: db  snap.0000000000001857  snap.0000000000002D7F  snap.00000000000030BA  snap.000000000000366F  snap.0000000000003956  snap.0000000000003CB4
src/: access_log.rs  body.rs  cache.rs  config.rs  constants.rs  event.rs  http_range.rs  lib.rs  logging.rs  main.rs  net.rs  push.rs  runtime.rs  server.rs  upstream.rs
src/metrics/: mod.rs
src/middleware/: caching.rs  mod.rs  multirange.rs  recovery.rs  registry.rs  rewrite.rs
src/plugin/: dynamic.rs  example.rs  mod.rs  purge.rs  verifier.rs
src/proxy/: mod.rs  singleflight.rs
src/storage/: indexdb.rs  mod.rs  native.rs  object.rs  selector.rs  sharedkv.rs  tiered.rs
src/storage/bucket/: disk.rs  empty.rs  lru.rs  memory.rs  mod.rs
tests/: all_features.rs  cache_method.rs  chunked.rs  dynamic_plugin.rs  errcode.rs  filechanged.rs  push.rs  range.rs  upstream_weight.rs
tests/support/: mod.rs
