[package]
name = "tavern"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
base64 = "0.22"
futures = "0.3"
flexi_logger = { version = "0.28", features = ["compress"] }
hex = "0.4"
http = "1"
http-body-util = "0.1"
chrono = { version = "0.4", features = ["clock"] }
humantime-serde = "1"
hyper = { version = "1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "http1", "http2", "client-legacy"] }
indexmap = "=2.2.6"
log = "0.4"
md5 = "0.7"
rand = "0.8"
pprof = { version = "0.11", features = ["protobuf-codec"] }
nix = "0.26"
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1"
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sled = "0.34"
tokio = { version = "=1.37.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync"] }

[dev-dependencies]
tower-service = "0.3"
tempfile = "3"
httpdate = "1"
